--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -49,7 +49,7 @@ ol {
       url("./fonts/montserrat-v15-latin-900.svg#Montserrat") format("svg"); /* Legacy iOS */
 }
 
-body {
+#app {
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
@@ -94,7 +94,6 @@ img {
 
 /* Styles for layout */
 body {
-  margin: 0;
   padding: 0;
 }
 
@@ -188,75 +187,6 @@ article + article {
   display: block;
   margin-top: 2rem;
   text-align: center;
-}
-
-/* Hero */
-#hero {
-  min-height: 30vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  letter-spacing: 0.1rem;
-
-  h1 {
-    font-family: "Montserrat";
-    font-size: 5rem;
-    line-height: 1;
-    margin-bottom: 2.5rem;
-
-    span {
-      display: block;
-      background-image: linear-gradient(
-        var(--main-theme),
-        var(--main-subheading)
-      );
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-  }
-
-  .h2 {
-    font-size: 1.2rem;
-    margin-bottom: 2.5rem;
-    color: var(--tertiary-text);
-    text-transform: uppercase;
-  }
-
-  ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
-  }
-
-  li {
-    font-family: "Montserrat";
-    font-size: 1.4rem;
-    display: block;
-  }
-
-  .github {
-    border-radius: .5rem;
-    border: .1rem solid var(--tertiary-text);
-    padding: 1rem;
-    margin: 1rem auto;
-    text-decoration: none;
-    color: var(--tertiary-text);
-    display: flex;
-    justify-content: space-around;
-    width: 25rem;
-
-    &:hover {
-      background-color: var(--main-theme);
-      border: .1rem solid var(--tertiary-text);
-      color: var(--main-bg);
-
-      img {
-        filter: invert(1);
-      }
-    }
-  }
 }
 
 /* Recent Work  */
@@ -630,20 +560,6 @@ footer {
     align-items: stretch;
   }
 
-  #hero {
-    ul {
-      justify-content: center;
-    }
-
-    li {
-      font-size: 1.4rem;
-    }
-
-    ul li {
-      padding: 0 1rem;
-    }
-  }
-
   #recent-work {
     a {
       flex: 2 1 calc(50% - 2rem);
@@ -672,20 +588,6 @@ footer {
     text-align: right;
     font-size: 1.5rem;
     padding-right: 2rem;
-  }
-
-  #hero {
-    h1 {
-      font-size: 6.5rem;
-    }
-
-    .h2 {
-      font-size: 1.4rem;
-    }
-
-    li {
-      font-size: 1.65rem;
-    }
   }
 
   #recent-work {
@@ -772,34 +674,6 @@ footer {
   .container {
     max-width: 1200px;
     margin: 0 auto;
-  }
-
-  #hero {
-    min-height: 60rem;
-
-    ul {
-      max-width: 1200px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    h1 {
-      font-size: 9rem;
-
-      span {
-        display: inline;
-      }
-    }
-
-    .h2 {
-      font-size: 1.7rem;
-      margin-bottom: 4.5rem;
-    }
-
-    li {
-      font-size: 2rem;
-      max-width: unset;
-    }
   }
 
   #recent-work {
